*Empty MediaWiki Message*

--- a/Симкина_веле_(Покш_Килейбуе).mw
+++ b/Симкина_веле_(Покш_Килейбуе).mw
@@ -82,13 +82,11 @@
 * А.П. Лавровской, Р.В. Макаркиной —  тонавтыцят
 
 ==Веленть эрямодонть==
-Велесэнть улить<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> : [[Баба Васянь эрьке]], ''Симкина ёно пакся'', ''Симкинань латко'', ''Синдяров'', ''[[Стариця]]'', ''Сэрей грива'', ''Татаронь поробка'', ''Ташто Суро'', ''Торф болота'', ''Тросной'', ''Тросной эрьке'', ''Тумопуло'', ''Тунель пандо'', ''Тюжа эрьке'', ''Тюжа эрьке удалкс'', ''Чеймарь эрьке'', ''Чёрный луг'', ''Чеча'', ''Човар латко'', ''Ягодной'', ''Янгай''. 
+Велесэнть улить<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>: [[Баба Васянь эрьке]], ''Базар латко'', ''Белдевка'', ''Беляёвка'', ''Беляёвка эрьке'', ''Биляевка'', ''Биостанция МГУ'', ''Бирюкчей'', ''Болота чей'', ''Валгума'', ''Глубокой'', ''Глухой эрьке'', ''Дожга уло'', ''Долгой'', ''Дорка'', ''Жёлтое'', ''Жёлудь лисьма'', ''Заповед'', ''Запоед'', ''Иванонь мода'', ''Каль удалксонь лисьмапря'', ''[[Кантол латко]]'', ''Кантол удалкс'', ''Капса юрт'', ''Катай юрт'', ''Кельме эрьке'', ''Ключик'', ''Крута'', ''Крута пандо'', ''Кулыскал латко'', ''Кумбула'', ''Кучапа'', ''Лапшарка'', ''Левшкерь эрьке'', ''Лём'', ''Лисьма грива'', ''Луша бабань лисьмапря'', ''Мазы угол'', ''Мучалей'', ''Незванка'', ''Нудей чей'', ''Нурькимне'', ''Ознома латко'', ''Ознома лисьма'', ''Ознома пря латко'', ''Озяске'', ''Печкема'', ''Пиче  ур'', ''Пой нердень луга'', ''Попонь поляна пакся'', ''Присурье'', ''Раужо мода'', ''Раужо эрьке'', ''Сарайпря'', ''Симкина ёно пакся'', ''Симкинань латко'', ''Синдяров'', ''[[Стариця]]'', ''Сэрей грива'', ''Татаронь поробка'', ''Ташто Суро'', ''Торф болота'', ''Тросной'', ''Тросной эрьке'', ''Тумопуло'', ''Тунель пандо'', ''Тюжа эрьке'', ''Тюжа эрьке удалкс'', ''Чеймарь эрьке'', ''Чёрный луг'', ''Чеча'', ''Човар латко'', ''Ягодной'', ''Янгай''. 
 <br />
-курот: ''Алопе'',  ''Сэдьбе'', ''Cэдьпе'',  ''Удало ульця'', ''Фарваз'', ''Цеця ульця'', ''Эрзя велине''.<br />
+курот: ''Алопе'', ''Варваровка'', ''Варлановка'', ''Ведьпе'', ''Верепе'', ''Ёгоревка'', ''Навоз пе'', ''Од линей'', ''Пичепе'', ''Сэдьбе'', ''Cэдьпе'',  ''Удало ульця'', ''Фарваз'', ''Цеця ульця'', ''Эрзя велине''.<br />
 
 Веленть вакссо ули кшнинь пингень ошке.
-
-
 == Сёрм.: ==
 <references />
 
