*Empty MediaWiki Message*

--- a/Пейкужо_буе.mw
+++ b/Пейкужо_буе.mw
@@ -97,6 +97,7 @@
 рузонь велеть:
 * [[Выша (Пейкужо буе)|Выша]] 
 * [[Озерный (Пейкужо буе)|Озерный]] 
+* [[Симкино (Пейкужо буе)|Симкино]] – ({{lang-ru|п. Симкино}})
 * [[Удево (Пейкужо буе)|Удево]]
 
 човор велеть:
