*Empty MediaWiki Message*

--- a/Умёт_(смустьтне).mw
+++ b/Умёт_(смустьтне).mw
@@ -1,7 +1,7 @@
 '''Умёт''':
 ;Топонимт
 * [[Умет (Пейкужо буе)|Умёт]] — ошкондямо посёлка [[Пейкужо буе]]сэ, [[Мордовия]]со.
-* [[Умёт (Томбамонь ёнкс)|Умёт]] — веле [[Умётонь буе]]сэ, [[Томбамонь ёнкс]]со.
+* [[Умёт (Томбамонь ёнкс)|Умёт]] — веле [[Умётонь буе (Томбамонь ёнкс)|Умётонь буе]]сэ, [[Томбамонь ёнкс]]со.
 __DISAMBIG__
 
 [[Category:Авейкетькс]]
