/* Вадолеень сянголейтне (вп прамсто) */

--- a/Парца_лей.mw
+++ b/Парца_лей.mw
@@ -35,7 +35,7 @@
 
 == Вадолеень сянголейтне (вп прамсто)==
 *  [[Виндрей лей]] (6 вп) — (вить)
-* Лундан (51 вп) — (керш)
+* [[Лундан лей]] (51 вп) — (керш)
 * [[Чюжь лей]] (66 вп) — (керш)
 * Сухой Липляй, Студенец (92 вп) — (керш)
 * Патра (108 вп) — (керш)
