*Empty MediaWiki Message*

--- a/Меремяэ_буе.mw
+++ b/Меремяэ_буе.mw
@@ -92,7 +92,7 @@
 * [[Мику (Меремяэ буе)|Мику]] — ({{lang-et|Miku}})
 * [[Навикы (Меремяэ буе)|Навикы]] — ({{lang-et|Navikõ}})
 * [[Обиница (Меремяэ буе)|Обиница]] — ({{lang-et|Obinitsa}})
-* [[Олехковка (Меремяэ буе)|Олехковка]] — ({{lang-et|Olehkova}})
+* [[Олехкова (Меремяэ буе)|Олехкова]] — ({{lang-et|Olehkova}})
 * [[Острова (Меремяэ буе)|Острова]] — ({{lang-et|Ostrova}})
 * [[Паклова (Меремяэ буе)|Паклова]] — ({{lang-et|Paklova}})
 * [[Паланды (Меремяэ буе)|Паланды]] — ({{lang-et|Palandõ}})
