--- a/ЛопаПарцун:Меремяэнь_вельтне.mw
+++ b/ЛопаПарцун:Меремяэнь_вельтне.mw
@@ -47,7 +47,7 @@
 {{•}}  [[Мику (Меремяэ буе)|Мику]] 
 {{•}}  [[Навикы (Меремяэ буе)|Навикы]] 
 {{•}}  [[Обиница (Меремяэ буе)|Обиница]]
-{{•}}  [[Олехковка (Меремяэ буе)|Олехковка]] 
+{{•}}  [[Олехкова (Меремяэ буе)|Олехкова]] 
 {{•}}  [[Острова (Меремяэ буе)|Острова]] 
 {{•}}  [[Паклова (Меремяэ буе)|Паклова]] 
 {{•}}  [[Паланды (Меремяэ буе)|Паланды]] 
