*Empty MediaWiki Message*

--- a/Васоньпеельть.mw
+++ b/Васоньпеельть.mw
@@ -1,4 +1,4 @@
-[[Артовкс:Scissors.jpg|frame|Эрьвакодат васоньпеелть - сустамо, ярсамонь пидеме, конёвокс]]
+[[Артовкс:Scissors.jpg|frame|Эрьвакодат васоньпеельть - сустамо, ярсамонь пидеме, конёвокс]]
 [[Артовкс:Tondilo.jpg|thumbnail|300px|Васоньпеельтне сустамоне ды конёвокс]]
 [[Артовкс:Tondilo por lado.jpg|thumbnail|300px|Васоньпеельтне кеме кшныне]]
 
