--- a/ЛопаПарцун:Отяжбуень_вельтне.mw
+++ b/ЛопаПарцун:Отяжбуень_вельтне.mw
@@ -1,7 +1,7 @@
 {{Навигационная полоса
 |лем  = Отяжбуень вельтне
 |заглавие = Отяжбуень вельтне
-|state = collapsed
+|state = hide
 |изображение = 
 |тюс = {{цвет|Россия}}
 |содержание = [[Ало Чукало (Отяжбуе)|Ало Чукало]]
