*Empty MediaWiki Message*

--- a/ЛопаПарцун:Отяжбуень_вельтне.mw
+++ b/ЛопаПарцун:Отяжбуень_вельтне.mw
@@ -7,9 +7,57 @@
 |содержание = [[Ало Чукало (Отяжбуе)|Ало Чукало]]
 {{•}} [[Аловеле (Отяжбуе)|Аловеле]]
 {{•}} [[Андрейвеле (Отяжбуе)|Андрейвеле]] 
-{{•}}
-{{•}}
-{{•}}
-{{•}}
+{{•}} [[Ботужвеле (Отяжбуе)|Ботужвеле]]
+{{•}} [[Вере Чукало (Отяжбуе)|Вере Чукало]]
+{{•}} [[Гаваева (Отяжбуе)|Гаваева]]
+{{•}} [[Дружной (Отяжбуе)|Дружной]]
+{{•}} [[Дюрькина (Отяжбуе)|Дюрькина]]
+{{•}} [[Капазвеле (Отяжбуе)|Капазвеле]]
+{{•}} [[Козловка (Отяжбуе)|Козловка]]
+{{•}} [[Ламбаське (Отяжбуе)|Ламбаське]]
+{{•}} [[Лига (Отяжбуе)|Лига]]
+{{•}} [[Пилезеле (Отяжбуе)|Пилезеле]]
+{{•}} [[Пумбра (Отяжбуе)|Пумбра]] 
+{{•}} [[Отяжвеле (Отяжбуе)|Отяжвеле]]
+{{•}} [[Сабанцеле (Отяжбуе)|Сабанцеле]]
+{{•}} [[Сайнеле (Отяжбуе)|Сайнеле]]
+{{•}} [[Селища (Отяжбуе)|Селища]]
+{{•}} [[Смирновка (Отяжбуе)|Смирновка]] 
+{{•}} [[Сырезьбуе (Отяжбуе)|Сырезьбуе]] 
+{{•}} [[Тазвеле (Отяжбуе)|Тазвеле]]
+{{•}} [[Таразбие (Отяжбуе)|Таразбие]]
+{{•}} [[Трокс кужо (Отяжбуе)|Трокс кужо]]
+{{•}} [[Ульяновка (Отяжбуе)|Ульяновка]]
+{{•}} [[Целпанова (Отяжбуе)|Целпанова]]
+{{•}} [[Алашеевка (Отяжбуе)|Алашеевка]] 
+{{•}} [[Ахматово (Отяжбуе)|Ахматово]]
+{{•}} [[Бобоедово чугункань кинь явома (Отяжбуе)|Бобоедово чугункань кинь явома]]
+{{•}} [[Большие Манадыши (Отяжбуе)|Большие Манадыши]]
+{{•}} [[Вачарлей (Отяжбуе)|Вачарлей]]
+{{•}} [[Дады (Отяжбуе)|Дады]]
+{{•}} [[Елхи (Отяжбуе)|Елхи]] 
+{{•}} [[Каменка (Отяжбуе)|Каменка]]
+{{•}} [[Керамсурка (Отяжбуе)|Керамсурка]]
+{{•}} [[Знаменское (Отяжбуе)|Знаменское]]
+{{•}} [[Малые Манадыши (Отяжбуе)|Малые Манадыши]] 
+{{•}} [[Макалейка (Отяжбуе)|Макалейка]]
+{{•}} [[Манадыши (Отяжбуе)|Манадыши]] 
+{{•}} [[Михайловка (Отяжбуе)|Михайловка]]
+{{•}} [[Орловка (Отяжбуе)|Орловка]]
+{{•}} [[Паранеи (Отяжбуе)|Паранеи]]
+{{•}} [[Пашино (Отяжбуе)|Пашино]] 
+{{•}} [[Пиченейка (Отяжбуе)|Пиченейка]]
+{{•}} [[Покровское (Отяжбуе)|Покровское]]
+{{•}} [[Ребровка (Отяжбуе)|Ребровка]] 
+{{•}} [[Русские Дубровки (Отяжбуе)|Русские Дубровки]]
+{{•}} [[Сосуновка (Отяжбуе)|Сосуновка]]
+{{•}} [[Старое Баево (Отяжбуе)|Старое Баево]]
+{{•}} [[Тетюши (Отяжбуе)|Тетюши]]
+{{•}} [[Ушаковка (Отяжбуе)|Ушаковка]]
+{{•}} [[Фёдоровка (Отяжбуе)|Фёдоровка]]
+{{•}} [[Чаунза (Отяжбуе)|Чаунза]] 
+{{•}} [[Чебудасы (Отяжбуе)|Чебудасы]] 
+{{•}} [[Шейн-Майдан (Отяжбуе)|Шейн-Майдан]] 
+{{•}} [[Наборные Сыреси (Отяжбуе)|Наборные Сыреси]]
 }}<noinclude>
 </noinclude>
