*Empty MediaWiki Message*

--- a/Селища_(Отяжбуе).mw
+++ b/Селища_(Отяжбуе).mw
@@ -60,6 +60,6 @@
  |язык сайта              = 
 }}
 '''Селища''' ({{Lang-ru|Селищи}}) — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
-
+{{Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
