--- a/Ало_веле_(Отяжбуе).mw
+++ b/Ало_веле_(Отяжбуе).mw
@@ -1,4 +1,3 @@
-<br />
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Ало веле 
@@ -91,3 +90,4 @@
 [[Category:Мордовиянь велеть|А]]
 [[Category:Отяжбуень велеть|А]]
 [[Category:Эрзянь велеть]]
+{{Отяжбуень вельтне}}
