*Empty MediaWiki Message*

--- a/Ботужвеле_(Отяжбуе).mw
+++ b/Ботужвеле_(Отяжбуе).mw
@@ -1,4 +1,3 @@
-<br />
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Ботужвеле
@@ -75,3 +74,4 @@
 [[Category:Мордовиянь велеть|Б]]
 [[Category:Отяжбуень велеть|Б]]
 [[Category:Эрзянь велеть]]
+{{Отяжбуень вельтне}}
