*Empty MediaWiki Message*

--- a/Вере_Чукало_(Отяжбуе).mw
+++ b/Вере_Чукало_(Отяжбуе).mw
@@ -1,5 +1,4 @@
 {{Лия смустьтне|Чукал (смустьтне)}}
-<br />
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Вере Чукало
@@ -80,3 +79,4 @@
 [[Category:Мордовиянь велеть|В]]
 [[Category:Отяжбуень велеть|В]]
 [[Category:Эрзянь велеть]]
+{{Отяжбуень вельтне}}
