--- a/Гаваева_(Отяжбуе).mw
+++ b/Гаваева_(Отяжбуе).mw
@@ -39,8 +39,8 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 
-  |год переписи           = 
+  |эрицятне               = 0
+  |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
   |национальный состав    = 
