--- a/ЛопаПарцун:Отяжбуень_вельтне.mw
+++ b/ЛопаПарцун:Отяжбуень_вельтне.mw
@@ -4,60 +4,60 @@
 |state = state
 |изображение = 
 |тюс = {{цвет|Россия}}
-|содержание = [[Ало Чукало (Отяжбуе)|Ало Чукало]]
+|содержание = [[Алашеевка (Отяжбуе)|Алашеевка]] 
+{{•}} [[Ало Чукало (Отяжбуе)|Ало Чукало]]
 {{•}} [[Ало веле (Отяжбуе)|Ало веле]]
 {{•}} [[Андрейвеле (Отяжбуе)|Андрейвеле]] 
-{{•}} [[Ботужвеле (Отяжбуе)|Ботужвеле]]
-{{•}} [[Вере Чукало (Отяжбуе)|Вере Чукало]]
-{{•}} [[Гаваева (Отяжбуе)|Гаваева]]
-{{•}} [[Дружной (Отяжбуе)|Дружной]]
-{{•}} [[Дюрькина (Отяжбуе)|Дюрькина]]
-{{•}} [[Капазвеле (Отяжбуе)|Капазвеле]]
-{{•}} [[Козловка (Отяжбуе)|Козловка]]
-{{•}} [[Ламбаське (Отяжбуе)|Ламбаське]]
-{{•}} [[Лига (Отяжбуе)|Лига]]
-{{•}} [[Пилезеле (Отяжбуе)|Пилезеле]]
-{{•}} [[Пумбра (Отяжбуе)|Пумбра]] 
-{{•}} [[Отяжвеле (Отяжбуе)|Отяжвеле]]
-{{•}} [[Сабанцеле (Отяжбуе)|Сабанцеле]]
-{{•}} [[Сайнеле (Отяжбуе)|Сайнеле]]
-{{•}} [[Селища (Отяжбуе)|Селища]]
-{{•}} [[Смирновка (Отяжбуе)|Смирновка]] 
-{{•}} [[Сырезьбуе (Отяжбуе)|Сырезьбуе]] 
-{{•}} [[Тазвеле (Отяжбуе)|Тазвеле]]
-{{•}} [[Таразбие (Отяжбуе)|Таразбие]]
-{{•}} [[Трокс кужо (Отяжбуе)|Трокс кужо]]
-{{•}} [[Ульяновка (Отяжбуе)|Ульяновка]]
-{{•}} [[Целпанова (Отяжбуе)|Целпанова]]
-{{•}} [[Алашеевка (Отяжбуе)|Алашеевка]] 
 {{•}} [[Ахматово (Отяжбуе)|Ахматово]]
 {{•}} [[Бобоедово чугункань кинь явома (Отяжбуе)|Бобоедово чугункань кинь явома]]
 {{•}} [[Большие Манадыши (Отяжбуе)|Большие Манадыши]]
+{{•}} [[Ботужвеле (Отяжбуе)|Ботужвеле]]
 {{•}} [[Вачарлей (Отяжбуе)|Вачарлей]]
+{{•}} [[Вере Чукало (Отяжбуе)|Вере Чукало]]
+{{•}} [[Гаваева (Отяжбуе)|Гаваева]]
 {{•}} [[Дады (Отяжбуе)|Дады]]
+{{•}} [[Дружной (Отяжбуе)|Дружной]]
+{{•}} [[Дюрькина (Отяжбуе)|Дюрькина]]
 {{•}} [[Елхи (Отяжбуе)|Елхи]] 
-{{•}} [[Каменка (Отяжбуе)|Каменка]]
-{{•}} [[Керамсурка (Отяжбуе)|Керамсурка]]
 {{•}} [[Знаменское (Отяжбуе)|Знаменское]]
+{{•}} [[Каменка (Отяжбуе)|Каменка]]
+{{•}} [[Капазвеле (Отяжбуе)|Капазвеле]]
+{{•}} [[Керамсурка (Отяжбуе)|Керамсурка]]
+{{•}} [[Козловка (Отяжбуе)|Козловка]]
+{{•}} [[Ламбаське (Отяжбуе)|Ламбаське]]
+{{•}} [[Лига (Отяжбуе)|Лига]]
 {{•}} [[Малые Манадыши (Отяжбуе)|Малые Манадыши]] 
 {{•}} [[Макалейка (Отяжбуе)|Макалейка]]
 {{•}} [[Манадыши (Отяжбуе)|Манадыши]] 
 {{•}} [[Михайловка (Отяжбуе)|Михайловка]]
+{{•}} [[Наборные Сыреси (Отяжбуе)|Наборные Сыреси]]
 {{•}} [[Орловка (Отяжбуе)|Орловка]]
+{{•}} [[Отяжвеле (Отяжбуе)|Отяжвеле]]
 {{•}} [[Паранеи (Отяжбуе)|Паранеи]]
 {{•}} [[Пашино (Отяжбуе)|Пашино]] 
+{{•}} [[Пилезеле (Отяжбуе)|Пилезеле]]
 {{•}} [[Пиченейка (Отяжбуе)|Пиченейка]]
 {{•}} [[Покровское (Отяжбуе)|Покровское]]
+{{•}} [[Пумбра (Отяжбуе)|Пумбра]] 
 {{•}} [[Ребровка (Отяжбуе)|Ребровка]] 
 {{•}} [[Русские Дубровки (Отяжбуе)|Русские Дубровки]]
+{{•}} [[Сабанцеле (Отяжбуе)|Сабанцеле]]
+{{•}} [[Сайнеле (Отяжбуе)|Сайнеле]]
+{{•}} [[Селища (Отяжбуе)|Селища]]
+{{•}} [[Смирновка (Отяжбуе)|Смирновка]] 
 {{•}} [[Сосуновка (Отяжбуе)|Сосуновка]]
 {{•}} [[Старое Баево (Отяжбуе)|Старое Баево]]
+{{•}} [[Сырезьбуе (Отяжбуе)|Сырезьбуе]] 
+{{•}} [[Тазвеле (Отяжбуе)|Тазвеле]]
+{{•}} [[Таразбие (Отяжбуе)|Таразбие]]
 {{•}} [[Тетюши (Отяжбуе)|Тетюши]]
+{{•}} [[Трокс кужо (Отяжбуе)|Трокс кужо]]
+{{•}} [[Ульяновка (Отяжбуе)|Ульяновка]]
 {{•}} [[Ушаковка (Отяжбуе)|Ушаковка]]
 {{•}} [[Фёдоровка (Отяжбуе)|Фёдоровка]]
+{{•}} [[Целпанова (Отяжбуе)|Целпанова]]
 {{•}} [[Чаунза (Отяжбуе)|Чаунза]] 
 {{•}} [[Чебудасы (Отяжбуе)|Чебудасы]] 
 {{•}} [[Шейн-Майдан (Отяжбуе)|Шейн-Майдан]] 
-{{•}} [[Наборные Сыреси (Отяжбуе)|Наборные Сыреси]]
 }}<noinclude>
 </noinclude>
