--- a/ЛопаПарцун:UTC_шкань_каркст.mw
+++ b/ЛопаПарцун:UTC_шкань_каркст.mw
@@ -16,7 +16,7 @@
 [[UTC−07:00|−7]]&nbsp;{{!}}
 [[UTC−06:00|−6]]&nbsp;{{!}}
 [[UTC−05:00|−5]]&nbsp;{{!}}
-[[UTC−4:30|−4:30]]&nbsp;{{!}}
+''[[UTC−4:30|−4:30]]''&nbsp;{{!}}
 [[UTC−04:00|−4]]&nbsp;{{!}}
 [[UTC−3:30|−3:30]]&nbsp;{{!}}
 [[UTC−03:00|−3]]&nbsp;{{!}}
