*Empty MediaWiki Message*

--- a/Венькс.mw
+++ b/Венькс.mw
@@ -1,7 +1,7 @@
 '''венькс:'''  
-1- ёвтавкс (кортамо) кевкстема эли пшкадема лангс. " - Зярс эзинь кенере, леляй. Мекс истя кевкстнят? Сон тонеть алтазь, секс. Кавонь кирда шумбрачинь арсемат. Мацьказонь Лёфай[[http://erzia.saransk.ru/arhiv.php?n=5390&nom11=465|465 -те Эрзянь Мастор кулялопастнть]]
-2-каршо тев, тувталдозь кодамояк тевсэ, теемасо, эли ситуациясо.  
-3 - содамоаравксонь эли содамоёвксонь витевкс (витнема).
+# ёвтавкс (кортамо) кевкстема эли пшкадема лангс. " - Зярс эзинь кенере, леляй. Мекс истя кевкстнят? Сон тонеть алтазь, секс. Кавонь кирда шумбрачинь арсемат. Мацьказонь Лёфай[[http://erzia.saransk.ru/arhiv.php?n=5390&nom11=465|465 -те Эрзянь Мастор кулялопастнть]]
+# каршо тев, тувталдозь кодамояк тевсэ, теемасо, эли ситуациясо.  
+# содамоаравксонь эли содамоёвксонь витевкс (витнема).
 
 
 '''Синонимтнэ'''
@@ -17,8 +17,8 @@
 
 
 Фразеологизмы и кемекстазь валсюлмавкстнэ:
--кирдемс венькс;
--анок венькс;
--веньксэсь а учови:
-- кодамо кевкстемась -истямо веньксэсь. 
-- вете чумот -вейке венькс.
+* кирдемс венькс;
+* ано- венькс;
+* веньксэсь а учови:
+* кодамо к- кстемась -истямо веньксэсь. 
+* вете чумот -вейке венькс.
