*Empty MediaWiki Message*

--- a/Венькс.mw
+++ b/Венькс.mw
@@ -1,5 +1,5 @@
 '''венькс:'''  
-# ёвтавкс (кортамо) кевкстема эли пшкадема лангс. " - Зярс эзинь кенере, леляй. Мекс истя кевкстнят? Сон тонеть алтазь, секс. Кавонь кирда шумбрачинь арсемат. Мацьказонь Лёфай[[http://erzia.saransk.ru/arhiv.php?n=5390&nom11=465|465 -те Эрзянь Мастор кулялопастнть]]
+# ёвтавкс (кортамо) кевкстема эли пшкадема лангс. " - Зярс эзинь кенере, леляй. Мекс истя кевкстнят? Сон тонеть алтазь, секс. Кавонь кирда шумбрачинь арсемат. Мацьказонь Лёфай [http://erzia.saransk.ru/arhiv.php?n=5390&nom11=465|465 -те Эрзянь Мастор кулялопастнть]
 # каршо тев, тувталдозь кодамояк тевсэ, теемасо, эли ситуациясо.  
 # содамоаравксонь эли содамоёвксонь витевкс (витнема).
 
