--- a/Нумолот.mw
+++ b/Нумолот.mw
@@ -1,4 +1,19 @@
-[[Артовкс:Feldhase.jpg|thumb|right|250px|Нумоло]]
+{{Таксономиясь
+| name = Нумоло
+| image file = Feldhase.jpg
+| image descr = Нумоло
+| regnum = Ракшат
+| phylum = 
+| classis = 
+| ordo = 
+| familia = 
+| tribus = 
+| genus = 
+| latin = {{Btname|Lepus|(Linnaeus, [[1758]])}}
+| section name = 
+| section text = 
+}}
+
 
 '''Ну́моло''' — те идем ракша.
 
