*Empty MediaWiki Message*

--- a/Нумолот.mw
+++ b/Нумолот.mw
@@ -15,7 +15,7 @@
 }}
 
 
-'''Ну́моло''' — те идем ракша.
+'''Ну́моло''' ({{Lang-la|Lepus}}) — те идем ракша.
 
 [[Категория:Ракшат]]
 [[Категория:Пачат]]
