--- a/Ахматово_(Отяжбуе).mw
+++ b/Ахматово_(Отяжбуе).mw
@@ -60,5 +60,6 @@
 }}
 '''Ахматово''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
