--- a/Бобоедово_чугункань_кинь_явома_(Отяжбуе).mw
+++ b/Бобоедово_чугункань_кинь_явома_(Отяжбуе).mw
@@ -59,6 +59,6 @@
  |язык сайта              = 
 }}
 '''Бобоедово чугункань кинь явома''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
-
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
