*Empty MediaWiki Message*

--- a/Шейн-Майдан_(Отяжбуе).mw
+++ b/Шейн-Майдан_(Отяжбуе).mw
@@ -59,6 +59,6 @@
  |язык сайта              = 
 }}
 '''Шейн-Майдан''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
-
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
