--- a/Чебудасы_(Отяжбуе).mw
+++ b/Чебудасы_(Отяжбуе).mw
@@ -60,5 +60,7 @@
 }}
 '''Чебудасы''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
+
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
