--- a/Чаунза_(Отяжбуе).mw
+++ b/Чаунза_(Отяжбуе).mw
@@ -61,5 +61,7 @@
 }}
 '''Чаунза''' ({{Lang-ru|Чамзинка}}) — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
+
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
