--- a/Фёдоровка_(Отяжбуе).mw
+++ b/Фёдоровка_(Отяжбуе).mw
@@ -61,5 +61,6 @@
 }}
 '''Фёдоровка''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
