--- a/Ушаковка_(Отяжбуе).mw
+++ b/Ушаковка_(Отяжбуе).mw
@@ -61,5 +61,6 @@
 }}
 '''Ушаковка''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
