*Empty MediaWiki Message*

--- a/Трокс_кужо_(Отяжбуе).mw
+++ b/Трокс_кужо_(Отяжбуе).mw
@@ -74,6 +74,7 @@
 
 Трокс кужонть вакссо ули маар XIV пингэнь (срубонь культура бронзань пингэнь), [[Киржеманонь казне]].  
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть|Т]]
 [[Category:Отяжбуень велеть|Т]]
 [[Category:Эрзянь велеть]]
