--- a/Тетюши_(Отяжбуе).mw
+++ b/Тетюши_(Отяжбуе).mw
@@ -61,5 +61,6 @@
 {{Лия смустьтне|Тетюши (смустьтне)}}
 '''Тетюши''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
