*Empty MediaWiki Message*

--- a/Таразбие_(Отяжбуе).mw
+++ b/Таразбие_(Отяжбуе).mw
@@ -84,6 +84,7 @@
 * [[Прохоров, Пётр Васильевич|П.В. Прохоров]] — прозаик, Ине Отечественной ойнань улицят
 * А.М. Живаева — [[Афганистан  Мастор|Афганистансо]] ойнань улиця
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть|Т]]
 [[Category:Отяжбуень велеть|Т]]
 [[Category:Эрзянь велеть]]
