*Empty MediaWiki Message*

--- a/Тазвеле_(Отяжбуе).mw
+++ b/Тазвеле_(Отяжбуе).mw
@@ -66,6 +66,7 @@
 == Веленть лемденть  ==
 Лемесь-антропоним:   ''Семен Тажнеев'' Тазвелень эрицясь 1624 иестэ якась медь мельга Ламбаськень яксемантень ({{Lang-ru|Лобаскинском ухожай}}) [[Нуя лей]] лангсо.
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть|Т]]
 [[Category:Отяжбуень велеть|Т]]
 [[Category:Эрзянь велеть]]
