--- a/Сырезьбуе_(Отяжбуе).mw
+++ b/Сырезьбуе_(Отяжбуе).mw
@@ -72,7 +72,7 @@
 == Сёрм.: ==
 <references />
 
-
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть|С]]
 [[Category:Отяжбуень велеть|С]]
 [[Category:Эрзянь велеть]]
