--- a/Старое_Баево_(Отяжбуе).mw
+++ b/Старое_Баево_(Отяжбуе).mw
@@ -61,5 +61,6 @@
 }}
 '''Ташто Баево''' ({{Lang-ru|Старое Баево}}) — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
