--- a/Сосуновка_(Отяжбуе).mw
+++ b/Сосуновка_(Отяжбуе).mw
@@ -60,5 +60,6 @@
 }}
 '''Сосуновка''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
