--- a/Смирновка_(Отяжбуе).mw
+++ b/Смирновка_(Отяжбуе).mw
@@ -61,5 +61,6 @@
 }}
 '''Смирновка''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
