*Empty MediaWiki Message*

--- a/Сайнеле_(Отяжбуе).mw
+++ b/Сайнеле_(Отяжбуе).mw
@@ -72,6 +72,7 @@
 == Сёрм.: ==
 <references />
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть|С]]
 [[Category:Отяжбуень велеть|С]]
 [[Category:Эрзянь велеть]]
