*Empty MediaWiki Message*

--- a/Сабанцеле_(Отяжбуе).mw
+++ b/Сабанцеле_(Отяжбуе).mw
@@ -71,7 +71,9 @@
 Эрицятнеде 800 ламо ломанть (2012 ие).
 
 Сабанцелентень педядо ашти [[Пумбра (Отяжбуе)|Пумбра веле]]сь. 
+ 
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть|С]]
 [[Category:Отяжбуень велеть|С]]
 [[Category:Эрзянь велеть]]
