--- a/Русские_Дубровки_(Отяжбуе).mw
+++ b/Русские_Дубровки_(Отяжбуе).mw
@@ -60,5 +60,6 @@
 }}
 '''Рузонь Дубровки''' ({{Lang-ru|Русские Дубровки}}) — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
