--- a/Пумбра_(Отяжбуе).mw
+++ b/Пумбра_(Отяжбуе).mw
@@ -77,6 +77,7 @@
 == Сёрм.: ==
 <references />
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть|П]]
 [[Category:Отяжбуень велеть|П]]
 [[Category:Эрзянь велеть]]
