--- a/Пиченейка_(Отяжбуе).mw
+++ b/Пиченейка_(Отяжбуе).mw
@@ -60,5 +60,6 @@
 }}
 '''Пичинейка''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
