--- a/Пилезеле_(Отяжбуе).mw
+++ b/Пилезеле_(Отяжбуе).mw
@@ -60,5 +60,6 @@
 }}
 '''Пилезеле''' ({{Lang-ru|Пилесево}}) — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
