*Empty MediaWiki Message*

--- a/Отяжвеле_(Отяжбуе).mw
+++ b/Отяжвеле_(Отяжбуе).mw
@@ -68,6 +68,7 @@
 == Веленть лемденть  ==
 Лемесь-антропоним:  икелень ''Атяш (Отяж)''  лементь эйстэ.
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть|О]]
 [[Category:Отяжбуень велеть|О]]
 [[Category:Эрзянь велеть]]
