--- a/Орловка_(Отяжбуе).mw
+++ b/Орловка_(Отяжбуе).mw
@@ -61,5 +61,6 @@
 }}
 '''Орловка''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
