--- a/Наборные_Сыреси_(Отяжбуе).mw
+++ b/Наборные_Сыреси_(Отяжбуе).mw
@@ -60,5 +60,6 @@
 }}
 '''Наборные Сыреси''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
