--- a/Михайловка_(Отяжбуе).mw
+++ b/Михайловка_(Отяжбуе).mw
@@ -61,5 +61,6 @@
 }}
 '''Михайловка''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
