*Empty MediaWiki Message*

--- a/Ламбаське_(Отяжбуе).mw
+++ b/Ламбаське_(Отяжбуе).mw
@@ -74,6 +74,7 @@
 * Н.Т. Гаваев — партиянь важодиця
 * [[Кулдуркаев, Яков Яковлевич|Я.Я. Кулдуркаев]] — валморозей
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть|Л]]
 [[Category:Отяжбуень велеть|Л]]
 [[Category:Эрзянь велеть]]
