--- a/Козловка_(Отяжбуе).mw
+++ b/Козловка_(Отяжбуе).mw
@@ -61,5 +61,6 @@
 }}
 '''Козловка''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
