--- a/Керамсурка_(Отяжбуе).mw
+++ b/Керамсурка_(Отяжбуе).mw
@@ -61,5 +61,6 @@
 }}
 '''Керамсурка''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
