*Empty MediaWiki Message*

--- a/Капазвеле_(Отяжбуе).mw
+++ b/Капазвеле_(Отяжбуе).mw
@@ -64,7 +64,7 @@
 
 == Веленть лемденть  ==
 Лемесь-антропоним:   ''Капас (Копас)'' лементь эйстэ.
-
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть|К]]
 [[Category:Отяжбуень велеть|К]]
 [[Category:Рузонь велеть]]
