--- a/Елхи_(Отяжбуе).mw
+++ b/Елхи_(Отяжбуе).mw
@@ -60,5 +60,6 @@
 }}
 '''Елхи''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
