--- a/Дюрькина_(Отяжбуе).mw
+++ b/Дюрькина_(Отяжбуе).mw
@@ -77,6 +77,7 @@
 
 Дюрькинань вакссо ули маар-калмазырь XII-XIV пингетнень (срубонь культура бронзань пингень).
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть|Д]]
 [[Category:Отяжбуень велеть|Д]]
 [[Category:Эрзянь велеть]]
