*Empty MediaWiki Message*

--- a/Дружной_(Отяжбуе).mw
+++ b/Дружной_(Отяжбуе).mw
@@ -60,5 +60,6 @@
 }}
 '''Дружной''' ({{Lang-ru|Дружный}}) — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
-[[Category:Мордовиянь велеть|К]]
-[[Category:Отяжбуень велеть|К]]
+{{ЛопаПарцун:Отяжбуень вельтне}}
+[[Category:Мордовиянь велеть|Д]]
+[[Category:Отяжбуень велеть|Д]]
