--- a/Вачарлей_(Отяжбуе).mw
+++ b/Вачарлей_(Отяжбуе).mw
@@ -61,5 +61,6 @@
 }}
 '''Вачарлей''' ({{Lang-ru|Вечерлей}}) — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
+{{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
