*Empty MediaWiki Message*

--- a/Покш_Манадыши.mw
+++ b/Покш_Манадыши.mw
@@ -74,5 +74,6 @@
 == Сёрм.: ==
 <references />
 
-[[Category:Мордовиянь велеть|М]]
-[[Category:Отяжбуень велеть|М]]
+{{ЛопаПарцун:Отяжбуень вельтне}}
+[[Category:Мордовиянь велеть|П]]
+[[Category:Отяжбуень велеть|П]]
