*Empty MediaWiki Message*

--- a/Лодзь_ош.mw
+++ b/Лодзь_ош.mw
@@ -60,5 +60,6 @@
  |язык сайта              = 
 }}
 
-'''Лодзь''' ({{lang-pl|Łódź}} {{Audio|Pl-Łódź-3.ogg|[wut​͡ɕ]}} — «венч») - польшань ошось
+'''Лодзь''' ({{lang-pl|Łódź}} {{Audio|Pl-Łódź-3.ogg|[wut​͡ɕ]}} — «венч») - [[Польшань Мастор|Польшань]] ош.
+
 [[Категория:Польша Масторонть ошт]]
