--- a/Кожай-Андреево_(Туймазань_буе).mw
+++ b/Кожай-Андреево_(Туймазань_буе).mw
@@ -67,6 +67,8 @@
 == Содавикс ломанть те велестэнть ==
 
 == Веленть эрямозо  ==
+Велень эрицятьне эсист пряст лемдить '''«мурза»'''<ref name="население в Башкортостане">[http://ikuzeev.ru/sites/default/files/mordva_bashkortostana_%5Brezhim_sovmestimosti%5D.pdf Мордовское население в Башкортостане. ФЕДЕРАЛЬНОЕ ГОСУДАРСТВЕННОЕ БЮДЖЕТНОЕ УЧРЕЖДЕНИЕ НАУКИ ИНСТИТУТ ЭТНОЛОГИЧЕСКИХ ИССЛЕДОВАНИЙ ИМ. Р.Г.КУЗЕЕВА УФИМСКОГО НАУЧНОГО ЦЕНТРА РОССИЙСКОЙ АКАДЕМИИ НАУК] {{Ref-ru}}</ref>.
+
 == Сёрм.: ==
 <references />
 
