--- a/Меремяэ_буе.mw
+++ b/Меремяэ_буе.mw
@@ -123,7 +123,7 @@
 * [[Тригиня (Меремяэ буе)|Тригиня]] — ({{lang-et|Triginä}})
 * [[Тсергонды (Меремяэ буе)|Тсергонды]] — ({{lang-et|Tsergondõ}})
 * [[Тсиргу (Меремяэ буе)|Тсиргу]] — ({{lang-et|Tsirgu}})
-* [[Тсюмба (Меремяэ буе)|Тсюмба]] — ({{lang-et|Tsumba}})
+* [[Тсумба (Меремяэ буе)|Тсумба]] — ({{lang-et|Tsumba}})
 * [[Туплова (Меремяэ буе)|Туплова]] — ({{lang-et|Tuplova}})
 * [[Туулова (Меремяэ буе)|Туулова]] — ({{lang-et|Tuulova}})
 * [[Тяяглова (Меремяэ буе)|Тяяглова]] — ({{lang-et|Tääglova}})
@@ -133,7 +133,7 @@
 * [[Васла (Меремяэ буе)|Васла]] — ({{lang-et|Vasla}})
 * [[Веретина (Меремяэ буе)|Веретина]] — ({{lang-et|Veretinä}})
 * [[Вински (Меремяэ буе)|Вински]] — ({{lang-et|Vinski}})
-* [[Выро (Меремяэ буе)|Выро]] — ({{lang-et|Viro}})
+* [[Виро (Меремяэ буе)|Виро]] — ({{lang-et|Viro}})
 * [[Вымморски (Меремяэ буе)|Вымморски]] — ({{lang-et|Võmmorski}})
 * [[Вайко-Хярма (Меремяэ буе)|Вайко-Хярма]] — ({{lang-et|Väiko-Härmä}})
 * [[Вайко-Серга (Меремяэ буе)|Вайко-Серга]] — ({{lang-et|Väiko-Serga}})
