*Empty MediaWiki Message*

--- a/ЛопаПарцун:Меремяэнь_вельтне.mw
+++ b/ЛопаПарцун:Меремяэнь_вельтне.mw
@@ -77,7 +77,7 @@
 {{•}}  [[Тригиня (Меремяэ буе)|Тригиня]] 
 {{•}}  [[Тсергонды (Меремяэ буе)|Тсергонды]] 
 {{•}}  [[Тсиргу (Меремяэ буе)|Тсиргу]] 
-{{•}}  [[Тсюмба (Меремяэ буе)|Тсюмба]] 
+{{•}}  [[Тсумба (Меремяэ буе)|Тсумба]] 
 {{•}}  [[Туплова (Меремяэ буе)|Туплова]] 
 {{•}}  [[Туулова (Меремяэ буе)|Туулова]] 
 {{•}}  [[Тяяглова (Меремяэ буе)|Тяяглова]] 
@@ -87,7 +87,7 @@
 {{•}}  [[Васла (Меремяэ буе)|Васла]] 
 {{•}}  [[Веретина (Меремяэ буе)|Веретина]]
 {{•}}  [[Вински (Меремяэ буе)|Вински]] 
-{{•}}  [[Выро (Меремяэ буе)|Выро]]
+{{•}}  [[Виро (Меремяэ буе)|Виро]]
 {{•}}  [[Вымморски (Меремяэ буе)|Вымморски]]
 {{•}}  [[Вайко-Хярма (Меремяэ буе)|Вайко-Хярма]] 
 {{•}}  [[Вайко-Серга (Меремяэ буе)|Вайко-Серга]]
