--- a/Меремяэ_буе.mw
+++ b/Меремяэ_буе.mw
@@ -131,7 +131,7 @@
 * [[Уусвада (Меремяэ буе)|Уусвада]] — ({{lang-et|Uusvada}})
 * [[Вааксаары (Меремяэ буе)|Вааксаары]] — ({{lang-et|Vaaksaarõ}})
 * [[Васла (Меремяэ буе)|Васла]] — ({{lang-et|Vasla}})
-* [[Веретина (Меремяэ буе)|Веретина]] — ({{lang-et|Veretinä}})
+* [[Веретиня (Меремяэ буе)|Веретиня]] — ({{lang-et|Veretinä}})
 * [[Вински (Меремяэ буе)|Вински]] — ({{lang-et|Vinski}})
 * [[Виро (Меремяэ буе)|Виро]] — ({{lang-et|Viro}})
 * [[Вымморски (Меремяэ буе)|Вымморски]] — ({{lang-et|Võmmorski}})
