*Empty MediaWiki Message*

--- a/ЛопаПарцун:Меремяэнь_вельтне.mw
+++ b/ЛопаПарцун:Меремяэнь_вельтне.mw
@@ -85,7 +85,7 @@
 {{•}}  [[Уусвада (Меремяэ буе)|Уусвада]] 
 {{•}}  [[Вааксаары (Меремяэ буе)|Вааксаары]] 
 {{•}}  [[Васла (Меремяэ буе)|Васла]] 
-{{•}}  [[Веретина (Меремяэ буе)|Веретина]]
+{{•}}  [[Веретиня (Меремяэ буе)|Веретиня]]
 {{•}}  [[Вински (Меремяэ буе)|Вински]] 
 {{•}}  [[Виро (Меремяэ буе)|Виро]]
 {{•}}  [[Вымморски (Меремяэ буе)|Вымморски]]
