--- a/Меремяэ_буе.mw
+++ b/Меремяэ_буе.mw
@@ -135,8 +135,8 @@
 * [[Вински (Меремяэ буе)|Вински]] — ({{lang-et|Vinski}})
 * [[Виро (Меремяэ буе)|Виро]] — ({{lang-et|Viro}})
 * [[Вымморски (Меремяэ буе)|Вымморски]] — ({{lang-et|Võmmorski}})
-* [[Вайко-Хярма (Меремяэ буе)|Вайко-Хярма]] — ({{lang-et|Väiko-Härmä}})
-* [[Вайко-Серга (Меремяэ буе)|Вайко-Серга]] — ({{lang-et|Väiko-Serga}})
+* [[Вяйко-Хярмя (Меремяэ буе)|Вяйко-Хярмя]] — ({{lang-et|Väiko-Härmä}})
+* [[Вяйко-Серга (Меремяэ буе)|Вяйко-Серга]] — ({{lang-et|Väiko-Serga}})
 |}
 
 
