*Empty MediaWiki Message*

--- a/ЛопаПарцун:Меремяэнь_вельтне.mw
+++ b/ЛопаПарцун:Меремяэнь_вельтне.mw
@@ -89,7 +89,7 @@
 {{•}}  [[Вински (Меремяэ буе)|Вински]] 
 {{•}}  [[Виро (Меремяэ буе)|Виро]]
 {{•}}  [[Вымморски (Меремяэ буе)|Вымморски]]
-{{•}}  [[Вайко-Хярма (Меремяэ буе)|Вайко-Хярма]] 
-{{•}}  [[Вайко-Серга (Меремяэ буе)|Вайко-Серга]]
+{{•}}  [[Вяйко-Хярмя (Меремяэ буе)|Вяйко-Хярмя]] 
+{{•}}  [[Вяйко-Серга (Меремяэ буе)|Вяйко-Серга]]
 }}<noinclude>
 </noinclude>
