*Empty MediaWiki Message*

--- a/Вяйко-Серга_(Меремяэ_буе).mw
+++ b/Вяйко-Серга_(Меремяэ_буе).mw
@@ -1,6 +1,6 @@
 {{ЭТ
  |статус                  = веле
- |Эрзянь лем              = Вайко-Серга
+ |Эрзянь лем              = Вяйко-Серга
  |оригинальное название   = {{lang-et|Väiko-Serga}}
  |изображение             = 
  |подчинение              = 
@@ -58,7 +58,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Вайко-Серга''' ({{lang-et|Väiko-Serga}})- те велесь [[Эстэнь Мастор]]со [[Вырумаа ёнкс]]со
+'''Вяйко-Серга''' ({{lang-et|Väiko-Serga}})- те велесь [[Эстэнь Мастор]]со [[Вырумаа ёнкс]]со
 {{Меремяэнь вельтне}}
 [[Категория:Эстэнь Мастор]]
 [[Категория:Эстэнь Масторонть велеть]]
