*Empty MediaWiki Message*

--- a/Сиргова_(Меремяэ_буе).mw
+++ b/Сиргова_(Меремяэ_буе).mw
@@ -58,7 +58,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Сиргова''' ({{lang-et|Sirgova}}) — те велесь [[Эстэнь Мастор]]со [[Вырумаа ёнкс]]со.
+'''Сиргова''' ({{lang-et|Sirgova}}, ka: '''Sirkova, Širkova, Sirguva, Laiküla, Širkovo''') ) — те велесь [[Эстэнь Мастор]]со [[Вырумаа ёнкс]]со.
 
 
 ==Сёрм. ==
