([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Reykjavík.ogg]] → [[File:Is-Reykjavík.oga]] Is-

--- a/Рейкьявик_ош.mw
+++ b/Рейкьявик_ош.mw
@@ -63,7 +63,7 @@
  |язык сайта 2            = pl
  |язык сайта 3            = en
 }}
-'''Рейкьявик ош''' ({{lang-is|Reykjavík}}, {{Audio-IPA|Reykjavík.ogg|[ˈreiːcaˌviːk]}}) —  те [[Исландия Мастор]]онь прявтошось.
+'''Рейкьявик ош''' ({{lang-is|Reykjavík}}, {{Audio-IPA|Is-Reykjavík.oga|[ˈreiːcaˌviːk]}}) —  те [[Исландия Мастор]]онь прявтошось.
 
 [[Категория:Исландия Масторонь ошт]]
 [[Категория:Прявтошт]]
