*Empty MediaWiki Message*

--- a/Иж_ош.mw
+++ b/Иж_ош.mw
@@ -1,4 +1,63 @@
-
+{{ЭТ
+ |статус                  = ош
+ |Эрзянь лем              = Иж
+ |оригинальное название   = 
+ |изображение             = 
+ |подчинение              = 
+ |мастор                  = 
+ |герб                    = 
+ |коцт                    = 
+ |описание герба          = 
+ |описание флага          = 
+ |ширина герба            = 
+ |ширина флага            = 
+  |lat_dir = |lat_deg = |lat_min = |lat_sec = 
+  |lon_dir = |lon_deg = |lon_min = |lon_sec = 
+  |CoordAddon             = 
+  |CoordScale             = 
+ |размер карты страны     = 
+ |размер карты региона    = 
+ |размер карты района     = 
+ |вид региона             = 
+ |регион                  = 
+ |регион в таблице        = 
+ |вид района              = 
+ |район                   = 
+ |район в таблице         = 
+ |вид общины              = 
+ |община                  = 
+ |община в таблице        = 
+ |внутреннее деление      = 
+ |вид главы               = 
+ |глава                   = 
+ |дата основания          = 
+ |первое упоминание       = 
+ |прежние имена           = 
+ |статус с                = 
+ |покшолмазо              = 
+ |вид высоты              = 
+ |высота центра ЭТ        = 
+ |климат                  = 
+ |официальный язык        = 
+  |эрицятне               = 642 024
+  |год переписи           = 2015
+  |плотность              = 
+  |агломерация            = 
+  |национальный состав    = 
+  |конфессиональный состав= 
+  |этнохороним            = 
+ |шкань каркс             = 
+ |DST                     = 
+ |кортавксонь код         = 
+ |почтовый индекс         = 
+ |почтовые индексы        = 
+ |автомобильный код       = 
+ |вид идентификатора      = 
+ |цифровой идентификатор  = 
+ |категория в Commons     = 
+ |сайт                    = 
+ |язык сайта              = 
+}}
 '''Иж ош''' (лиякс '''Ижкар''') — те [[Удмуртонь Республикась|Удмуртонь Республиканть]] прявтошось.
 
 Эрицятнеде 642 024 лом. ([[2015 ие]]), покшолмазо 315,15 [[Вайгельпе|вп²]]
