*Empty MediaWiki Message*

--- a/Иж_ош.mw
+++ b/Иж_ош.mw
@@ -1,10 +1,10 @@
 {{ЭТ
  |статус                  = ош
  |Эрзянь лем              = Иж
- |оригинальное название   = 
+ |оригинальное название   = {{Lang-udm|Ижкар}}
  |изображение             = 
  |подчинение              = 
- |мастор                  = 
+ |мастор                  = Россия
  |герб                    = 
  |коцт                    = 
  |описание герба          = 
