*Empty MediaWiki Message*

--- a/Иж_ош.mw
+++ b/Иж_ош.mw
@@ -11,16 +11,16 @@
  |описание флага          = 
  |ширина герба            = 
  |ширина флага            = 
-  |lat_dir = |lat_deg = |lat_min = |lat_sec = 
-  |lon_dir = |lon_deg = |lon_min = |lon_sec = 
+  |lat_dir = |lat_deg = 56|lat_min = 51|lat_sec = 
+  |lon_dir = |lon_deg = 53|lon_min = 13|lon_sec = 
   |CoordAddon             = 
   |CoordScale             = 
  |размер карты страны     = 
  |размер карты региона    = 
  |размер карты района     = 
- |вид региона             = 
- |регион                  = 
- |регион в таблице        = 
+ |вид региона             = республика
+ |регион                  = Удмуртонь Республика{{!}}Удмуртия
+ |регион в таблице        = 642 024
  |вид района              = 
  |район                   = 
  |район в таблице         = 
@@ -30,10 +30,10 @@
  |внутреннее деление      = 
  |вид главы               = 
  |глава                   = 
- |дата основания          = 
+ |дата основания          = 1760 ие
  |первое упоминание       = 
  |прежние имена           = 
- |статус с                = 
+ |статус с                = 1918 ие
  |покшолмазо              = 
  |вид высоты              = 
  |высота центра ЭТ        = 
@@ -46,17 +46,19 @@
   |национальный состав    = 
   |конфессиональный состав= 
   |этнохороним            = 
- |шкань каркс             = 
+ |шкань каркс             = +3
  |DST                     = 
  |кортавксонь код         = 
  |почтовый индекс         = 
- |почтовые индексы        = 
- |автомобильный код       = 
+ |почтовые индексы        = 426000 - 426999
+ |автомобильный код       = 18
  |вид идентификатора      = 
  |цифровой идентификатор  = 
  |категория в Commons     = 
- |сайт                    = 
- |язык сайта              = 
+ |сайт                    = http://www.izh.ru/
+ |язык сайта              = ru
+ |язык сайта 2            = en
+ |язык сайта 3            = udm
 }}
 '''Иж ош''' (лиякс '''Ижкар''') — те [[Удмуртонь Республикась|Удмуртонь Республиканть]] прявтошось.
 
