*Empty MediaWiki Message*

--- a/Иж_ош.mw
+++ b/Иж_ош.mw
@@ -2,7 +2,7 @@
  |статус                  = ош
  |Эрзянь лем              = Иж
  |оригинальное название   = {{Lang-udm|Ижкар}}
- |изображение             = 
+ |изображение             = Izhevsk 3.jpg
  |подчинение              = 
  |мастор                  = Россия
  |герб                    = 
@@ -18,9 +18,9 @@
  |размер карты страны     = 
  |размер карты региона    = 
  |размер карты района     = 
- |вид региона             = республика
+ |вид региона             = 
  |регион                  = Удмуртонь Республика{{!}}Удмуртия
- |регион в таблице        = 642 024
+ |регион в таблице        = Удмуртонь Республика{{!}}Удмуртия
  |вид района              = 
  |район                   = 
  |район в таблице         = 
