*Empty MediaWiki Message*

--- a/Иж_ош.mw
+++ b/Иж_ош.mw
@@ -19,8 +19,8 @@
  |размер карты региона    = 
  |размер карты района     = 
  |вид региона             = 
- |регион                  = Удмуртонь Республика{{!}}Удмуртия
- |регион в таблице        = Удмуртонь Республика{{!}}Удмуртия
+ |регион                  = Удмуртонь Республикась{{!}}Удмуртия
+ |регион в таблице        = Удмуртонь Республикась{{!}}Удмуртия
  |вид района              = 
  |район                   = 
  |район в таблице         = 
