*Empty MediaWiki Message*

--- a/Украина.mw
+++ b/Украина.mw
@@ -39,8 +39,39 @@
  |Примечания=
 }}
 '''Украина''' ({{lang-uk|Україна}} ловнови кода ''Украйина'') — мастор Чилисемань [[Европань Мастор]]со. 
-
 Украинань прявтошось — [[Киев]] ош.
+
+== Украинань масторпелькстне ==
+===Ёнкстне===
+* [[Винницань ёнкс]] — ({{Lang-uk|Вінницька область}})
+* [[Волынень ёнкс]]   — ({{Lang-uk|Волинська область}})
+* [[Днепропетровскоень ёнкс]]  — ({{Lang-uk|Дніпропетровська область}})
+* [[Донецкэнь ёнкс]] — ({{Lang-uk|Донецька область}})
+* [[Житомирэнь ёнкс]] — ({{Lang-uk|Житомирська область}})
+* [[Закарпатскоень ёнкс]] — ({{Lang-uk|Закарпатська область}})
+* [[Запорожьень ёнкс]] — ({{Lang-uk|Запорізька область}})
+* [[Ивано-Франковскоень ёнкс]] — ({{Lang-uk|Івано-Франківська область}})
+* [[Киевень ёнкс]] — ({{Lang-uk|Київська область}})
+* [[Кировоградонь ёнкс]] — ({{Lang-uk|Кіровоградська область}})
+* [[Луганскоень ёнкс]] — ({{Lang-uk|Луганська область}})
+* [[Львовонь ёнкс]] — ({{Lang-uk|Львівська область}})
+* [[Николаевень ёнкс]] — ({{Lang-uk|Миколаївська область}})
+* [[Одессань ёнкс]] — ({{Lang-uk|Одеська область}})
+* [[Полтавань ёнкс]] — ({{Lang-uk|Полтавська область}})
+* [[Ровнонь ёнкс]] — ({{Lang-uk|Рівненська область}})
+* [[Сумынь ёнкс]] — ({{Lang-uk|Сумська область}})
+* [[Тернопольскоень ёнкс]] — ({{Lang-uk|Тернопільська область}})
+* [[Харьковскоень ёнкс]] — ({{Lang-uk|Харківська область}})
+* [[Херсононь ёнкс]] — ({{Lang-uk|Херсонська область}})
+* [[Хмельницкоень ёнкс]] — ({{Lang-uk|Хмельницька область}})
+* [[Черкасскоень ёнкс]] — ({{Lang-uk|Черкаська область}})
+* [[Черниговонь ёнкс]] — ({{Lang-uk|Чернівецька область}})
+* [[Черновицкоень ёнкс]] — ({{Lang-uk|Чернігівська область}})
+=== Башка оштнэ ===
+* [[Киев ош]] — ({{Lang-uk|Київ}})
+* [[Севастополь ош]] — ({{Lang-uk|Севастополь}})
+=== Башка республикась ===
+* [[Башка республикась Крым]] — ({{Lang-uk|Автономна Республіка Крим}})
 
 == Сёрм. ==
 <references />
