--- a/Украина.mw
+++ b/Украина.mw
@@ -42,6 +42,7 @@
 Украинань прявтошось — [[Киев]] ош.
 
 == Украинань масторпелькстне ==
+Украина Масторсо ашти 24 ёнкстнень, 2 башка оштнень ды 1 республикань.
 ===Ёнкстне===
 * [[Винницань ёнкс]] — ({{Lang-uk|Вінницька область}})
 * [[Волынень ёнкс]]   — ({{Lang-uk|Волинська область}})
