--- a/Украина.mw
+++ b/Украина.mw
@@ -47,7 +47,7 @@
 * [[Винницань ёнкс]] — ({{Lang-uk|Вінницька область}})
 * [[Волынень ёнкс]]   — ({{Lang-uk|Волинська область}})
 * [[Днепропетровскоень ёнкс]]  — ({{Lang-uk|Дніпропетровська область}})
-* [[Донецкэнь ёнкс]] — ({{Lang-uk|Донецька область}})
+* [[Донецкоень ёнкс]] — ({{Lang-uk|Донецька область}})
 * [[Житомирэнь ёнкс]] — ({{Lang-uk|Житомирська область}})
 * [[Закарпатскоень ёнкс]] — ({{Lang-uk|Закарпатська область}})
 * [[Запорожьень ёнкс]] — ({{Lang-uk|Запорізька область}})
@@ -66,8 +66,8 @@
 * [[Херсононь ёнкс]] — ({{Lang-uk|Херсонська область}})
 * [[Хмельницкоень ёнкс]] — ({{Lang-uk|Хмельницька область}})
 * [[Черкасскоень ёнкс]] — ({{Lang-uk|Черкаська область}})
-* [[Черниговонь ёнкс]] — ({{Lang-uk|Чернівецька область}})
-* [[Черновицкоень ёнкс]] — ({{Lang-uk|Чернігівська область}})
+* [[Черниговонь ёнкс]] — ({{Lang-uk|Чернігівська область}})
+* [[Черновицкоень ёнкс]] — ({{Lang-uk|Чернівецька область}})
 === Башка оштнэ ===
 * [[Киев ош]] — ({{Lang-uk|Київ}})
 * [[Севастополь ош]] — ({{Lang-uk|Севастополь}})
