*Empty MediaWiki Message*

--- a/Хмельницкоень_ёнкс.mw
+++ b/Хмельницкоень_ёнкс.mw
@@ -69,7 +69,7 @@
  |Почтовые индексы                 = 
  |Интернет-домен                   = 
  |Код автомобильных номеров        = 
- |Сайт                             = 
+ |Сайт                             = http://www.oblrada.km.ua/
  |Категория в Commons              = 
  |Примечания                       = 
 }}
