*Empty MediaWiki Message*

--- a/Хмельницкоень_ёнкс.mw
+++ b/Хмельницкоень_ёнкс.mw
@@ -1,6 +1,6 @@
 {{Регион
  |Цвет1                            = {{Цвет|Украина Мастор}}
- |Эрзянь лем                       = Хмельницкоень 
+ |Эрзянь лем                       = Хмельницкоень ёнкс
  |Эсьлем                           = {{Lang-uk|Хмельницька область}}
  |Герб                             = 
  |Коцт                             = 
@@ -51,7 +51,7 @@
  |Максимальная высота              = 
  |Средняя высота                   = 
  |Минимальная высота               = 
- |Карта                            = 
+ |Карта                            = Map of Ukraine political simple Oblast Chmelnyzkyj.png 
  |Размер карты                     = 250
  |Карта административной единицы   = 
   |Размер карты ае                 = 
