*Empty MediaWiki Message*

--- a/Спорт.mw
+++ b/Спорт.mw
@@ -1,4 +1,5 @@
 {{Лия смустьтне|Спортось (смустьтне)}}
+[[Артовкс:20131031 FR06 Amandine Henry 9290.jpg|кенжешка|Спорт]]
 '''Спортось''', эрзякс мерить '''Налксемат''' ({{lang-en|sport}}, кирдязь юронь валстонть [[сырефранцузонь кель|сырефран.]] desport — «налксема», «эрьгалема») — пурназь-теезь ве лувсо ломанень теемат, конат аштить карадо-каршо сынст санонь-физикань анокстомасо, кона максы нарде  ды вий ломаненьте.
 
 Спортось — покш пелькс [[физикань мазычи|физикань мазычисе]]. Эйсензе пек парсте неяви кирдемась изнявксоньте. Эрицятне спортонть ды физикань мазычинть марто кеместэ сюлмавсть кезэрень шкатнестэ саезь. Эйкакшпингестэ ломантнень тонавтсть вадрясто важодеме, истямо тевсэ васенце лездыцякс ульнесть физикань теематне. Эрзятне  пек вечкильть бороцямо, ярмункань читнестэ тейневильть пелькстамот, лангозост пурнавильть ламо ваныцят.
