--- a/Хмельницкоень_ёнкс.mw
+++ b/Хмельницкоень_ёнкс.mw
@@ -74,3 +74,25 @@
  |Примечания                       = 
 }}
 '''Хмельницкоень ёнкс'''  ({{Lang-uk|Хмельницька область}}) - масторпельксесь Украинасо.
+
+==Хмельницкоень ёнксонь буетне ==
+* [[Белогорьень буе (Хмельницкоень ёнкс)|Белогорский буе]] ({{lang-uk|Білогірський район}})
+* [[Виньковцынь буе (Хмельницкоень ёнкс)|Виньковцынь буе]] ({{lang-uk|Віньковецький район}})
+* [[Волочискоень буе (Хмельницкоень ёнкс)|Волочискоень буе]] ({{lang-uk|Волочиський район}})
+* [[Городоконь буе (Хмельницкоень ёнкс)|Городоконь буе]] ({{lang-uk|Городоцький район}})
+* [[Деражнянь буе (Хмельницкоень ёнкс)|Деражнянь буе]] ({{lang-uk|Деражнянський район}})
+* [[Дунаевецынь буе (Хмельницкоень ёнкс)|Дунаевецынь буе]] ({{lang-uk|Дунаєвецький район}})
+* [[Изяславонь буе (Хмельницкоень ёнкс)|Изяславонь буе]] ({{lang-uk|Ізяславський район}})
+* [[Каменец-Подольскоень буе (Хмельницкоень ёнкс)|Каменец-Подольскоень буе]] ({{lang-uk|Кам'янець-Подільський район}})
+* [[Красиловонь буе (Хмельницкоень ёнкс)|Красиловонь буе]] ({{Lank-uk|Красилівський район}})
+* [[Летичевень буе (Хмельницкоень ёнкс)|Летичевень буе]] ({{lang-uk|Летичівський район}})
+* [[Одушицань буе (Хмельницкоень ёнкс)|Одушицань буе]] ({{Lang-uk|Новоушицький район}})
+* [[Полоноень буе (Хмельницкоень ёнкс)|Полоноень буе]] ({{lang-uk|Полонський район}})
+* [[Славутань буе (Хмельницкоень ёнкс)|Славутань буе]] ({{lang-uk|Славутський район}})
+* [[Староконстантиновонь буе (Хмельницкоень ёнкс)|Староконстантиновонь буе]] ({{lang-uk|Старокостянти́нівський райо́н}})
+* [[Таштосинявань буе (Хмельницкоень ёнкс)|Таштосинявань буе]] ({{lang-uk|Старосинявський район}})
+* [[Теофиполень буе (Хмельницкоень ёнкс)|Теофиполень буе]] ({{lang-uk|Теофіпольський район}})
+* [[Хмельницкоень буе (Хмельницкоень ёнкс)|Хмельницкоень буе]] ({{lang-uk|Хмельницький район}})
+* [[Чемеровецынь буе (Хмельницкоень ёнкс)|Чемеровецынь буе]] ({{lang-uk|Чемеровецький район}})
+* [[Шепетовкань буе (Хмельницкоень ёнкс)|Шепетовкань буе]] ({{lang-uk|Шепетівський район}})
+* [[Ярмолинецынь буе (Хмельницкоень ёнкс)|Ярмолинецынь буе]] ({{lang-uk|Ярмолинецький район}})
