*Empty MediaWiki Message*

--- a/Хмельницкоень_ёнкс.mw
+++ b/Хмельницкоень_ёнкс.mw
@@ -84,7 +84,7 @@
 * [[Дунаевецынь буе (Хмельницкоень ёнкс)|Дунаевецынь буе]] ({{lang-uk|Дунаєвецький район}})
 * [[Изяславонь буе (Хмельницкоень ёнкс)|Изяславонь буе]] ({{lang-uk|Ізяславський район}})
 * [[Каменец-Подольскоень буе (Хмельницкоень ёнкс)|Каменец-Подольскоень буе]] ({{lang-uk|Кам'янець-Подільський район}})
-* [[Красиловонь буе (Хмельницкоень ёнкс)|Красиловонь буе]] ({{Lank-uk|Красилівський район}})
+* [[Красиловонь буе (Хмельницкоень ёнкс)|Красиловонь буе]] ({{Lang-uk|Красилівський район}})
 * [[Летичевень буе (Хмельницкоень ёнкс)|Летичевень буе]] ({{lang-uk|Летичівський район}})
 * [[Одушицань буе (Хмельницкоень ёнкс)|Одушицань буе]] ({{Lang-uk|Новоушицький район}})
 * [[Полоноень буе (Хмельницкоень ёнкс)|Полоноень буе]] ({{lang-uk|Полонський район}})
