*Empty MediaWiki Message*

--- a/Хмельницкоень_ёнкс.mw
+++ b/Хмельницкоень_ёнкс.mw
@@ -96,3 +96,6 @@
 * [[Чемеровецынь буе (Хмельницкоень ёнкс)|Чемеровецынь буе]] ({{lang-uk|Чемеровецький район}})
 * [[Шепетовкань буе (Хмельницкоень ёнкс)|Шепетовкань буе]] ({{lang-uk|Шепетівський район}})
 * [[Ярмолинецынь буе (Хмельницкоень ёнкс)|Ярмолинецынь буе]] ({{lang-uk|Ярмолинецький район}})
+
+
+{{Украинань масторпелькстне}}
