--- a/Стенокардия.mw
+++ b/Стенокардия.mw
@@ -1,7 +1,7 @@
 Седеень ишемиянь ормань сехте сеедьстэ вастневиця неевтезэ.
 
 === Тувталтнэ ===
-Якстере верьсанонь спазма (зярдо санонть диаметразо вишкалгады кодамояк тувталонь кувалма, истямо тувталокс эрси ламо стака тевень теемась, апаро седейсэ аштемась ды лиятне, зярдо санонть потсо ютамо юткось вишкалгады седей сывелентень лотки сатомодо чапамоньтеись (кислородось), седе сеедьстэ те спазмась эрси сестэ зярдо сантнэнь потсо теевить атеросклерозонь калгодо потмоливкст (бляшкат). Сынь истякак стакалгавтыть веренть ютамонзо бути жо тенень стардови оштё спазмась — верень сатомась седеяк алкиньгады.
+Якстере верьсанонь спазма (зярдо санонть диаметразо вишкалгады кодамояк тувталонь кувалма, истямо тувталокс эрси ламо стака тевень теемась, апаро седейсэ аштемась ды лиятне, зярдо санонть потсо ютамо юткось вишкалгады седей сывелентень лотки сатомодо [[Чапамо чачтый|чапамоньтеись]], седе сеедьстэ те спазмась эрси сестэ зярдо сантнэнь потсо теевить атеросклерозонь калгодо потмоливкст (бляшкат). Сынь истякак стакалгавтыть веренть ютамонзо бути жо тенень стардови оштё спазмась — верень сатомась седеяк алкиньгады.
 
 === Пеняцямотне ===
 Стенокардиянь пингстэ ломанесь пеняци пициця эли, седе чуросто, лепштиця сэредькс лангс, сон устави мештень куншка-керш пелькссэнть, седейпенчтэнть кавто-колмо сантиметрадо вере, теде башка сэредьксэсь иррадиирови — ютазь сатстови: седейпенчс ды пекень верьксэс (эпигастрияс), керш кедентень, лавтовонтень, пей салазкентень, керш ёндо пейтненень, кона-кона ломаненть те сэретьксэнть марто сайнесы куломадо пек пелемаськак. Неть сэредькстнэ свал ютыть 3-5 минутань трокс, бути ломанесь аламос ойми, эли саи ормаменькс.
