--- a/Амёба.mw
+++ b/Амёба.mw
@@ -45,8 +45,8 @@
 Тейдяно эщо истямо опыт: микроскопонь зеркалыненть пелевидьс вельтясынек раужо конёвсо. Каплянть вейке пельксэзэ ули валдосо, омбоце пелезэ — чоподасо. Весе амёбатне валдо пельксстэнть кармить ютамо чопода пельксэнтень. Мейле чополгавтсынек валдо пельксэнть ды валдомтсынек чопода пельк- сэнть. Амёбатнеяк кармигь мекев ютамо. 
 Весе неть амёба марто опыттнэ кортыть седе, кода лиялгады амёбась пертпелкстэнть каятоманть эйстэ: сон лиялгады, кода минь карматано сонзэ эйсэ эждеме эли нолдатано валдо, эли нолдасынек салов ведьс. 
 ==Амёбатнень явновомадост==
-Карминдерятано седе кувать ваномо микроскопонь пачк, минь нейсынек, кода амёбанть ядразо карми кувалгадомо ды таргавомо куншка видьстэ. Шкань ютазь те таргавксось човиньгады, мейле ядрась сезеви кавтов, амёбантень теевить кавто ядрат. Яла теке тевесь теньсэ а прядови: ней карми таргавомо кавтов протоплазмась. Васня протоплазманть пельксэнзэ ульнесть сюлмавозь чова кельнень кондямосо, мейле те сюлмавксоськак сезеви, тее- вить кавто од амёбат. Эрьванть ули эсензэ ядразо ды эсензэ протоплазмазо. Икелень амёбась — авась — лоткась эрямодо.
-Эрьва лисезь од амёбась карми эрямо башка ды шкань ютазь сонгак карми явовомо кавтов. Тестэ чаркодеви: амёбатне раштыть кавтов явовозь. 
+Карминдерятано седе кувать ваномо микроскопонь пачк, минь нейсынек, кода амёбанть ядразо карми кувалгадомо ды таргавомо куншка видьстэ. Шкань ютазь те таргавксось човиньгады, мейле ядрась сезеви кавтов, амёбантень теевить [[2 (ловома вал)|кавто]] ядрат. Яла теке тевесь теньсэ а прядови: ней карми таргавомо кавтов протоплазмась. Васня протоплазманть пельксэнзэ ульнесть сюлмавозь чова кельнень кондямосо, мейле те сюлмавксоськак сезеви, теевить кавто од амёбат. Эрьванть ули эсензэ ядразо ды эсензэ протоплазмазо. Икелень амёбась — [[авака|авась]] — лоткась эрямодо.
+Эрьва лисезь од амёбась карми эрямо башка ды шкань ютазь сонгак карми явовомо кавтов. Тестэ чаркодеви: амёбатне раштыть кавтов явовозь.
 
 ==Инцестирования ==
 Амёбатне ванстыть эсь пряст эйсэ берянь условиятнеде. Зярдо зёлтось коськи эли кельми, эли мейскак эйсэнзэ коли ведесь, сестэ эрьва амёбась васня карми теевеме шарикекс, мейле сонзэ протоплазмастонзо карми лисеме навола вещества, кона вельтясы амёбанть перть пельде. Мейле те веществась шкань ютазь калгодкстоми, эйсэнзэ тееви лукшонь кондямо циста, сонзэ потсо амёбась а кулы, истя сон эри мик пек ламо иеть. Вармась канды истят амёбатнень пуль марто перть: пелев. Понгиндеряй истямо циста потсо амёбась ведьс, лейс эли зёлтс, цистась карми соламо, амёбась карми  эрямо таго икеле ладсо. 
