*Empty MediaWiki Message*

--- a/Донецкоень_ёнкс.mw
+++ b/Донецкоень_ёнкс.mw
@@ -69,11 +69,11 @@
  |Почтовые индексы                 = 
  |Интернет-домен                   = 
  |Код автомобильных номеров        = 
- |Сайт                             = 
+ |Сайт                             = http://www.donoda.gov.ua
  |Категория в Commons              = 
  |Примечания                       = 
 }}
-'''Донецкоень ёнкс'''  ({{Lang-uk|Хмельницька область}}, 1938 иестэ 1961 иес Сталинонь ) - масторпельксесь Украинасо.
+'''Донецкоень ёнкс'''  ({{Lang-uk|Донецька область}}, 1938 иестэ 1961 иес Сталинонь ) - масторпельксесь Украинасо.
 
 ==Донецкоень ёнксонь буетне ==
 
