*Empty MediaWiki Message*

--- a/Донецкоень_ёнкс.mw
+++ b/Донецкоень_ёнкс.mw
@@ -51,7 +51,7 @@
  |Максимальная высота              = 
  |Средняя высота                   = 
  |Минимальная высота               = 
- |Карта                            = 
+ |Карта                            = Donetsk in Ukraine (claims hatched).svg
  |Размер карты                     = 250
  |Карта административной единицы   = 
   |Размер карты ае                 = 
