*Empty MediaWiki Message*

--- a/Донецкоень_ёнкс.mw
+++ b/Донецкоень_ёнкс.mw
@@ -8,7 +8,7 @@
  |Ширина флага                     = 
  |Описание герба                   = 
  |Описание флага                   = 
- |Мастор                           = Украина
+ |Мастор                           = {{Масторкоцт|Украина}}
   |lat_dir = |lat_deg = |lat_min = |lat_sec = 
   |lon_dir = |lon_deg = |lon_min = |lon_sec = 
   |region     = 
